feat: unify media asset model